--- a/2.css/4. font.css
+++ b/2.css/4. font.css
@@ -24,6 +24,14 @@ p {
   text-align: center;
 
   text-decoration: red dotted underline;
+
+  /* 줄간격 */
+  line-height: 1.4em;
+
+  word-spacing: 0.2em;
+  letter-spacing: 0.2em;
+
+  text-transform: uppercase;
 }
 
 span {
@@ -34,3 +42,14 @@ span {
   */
   text-decoration: line-through dashed 3px;
 }
+
+.lineBox {
+  width: 300px;
+  height: 50px;
+  border: 3px solid black;
+  line-height: 50px;
+  text-align: center;
+}
+
+/* html에 .단어 를 치면 div class가 자동 생성됨 */
+/* html에 #단어를 치면 div id가 자동 생성됨 */
