--- a/5.clone.kakao/css/layout.css
+++ b/5.clone.kakao/css/layout.css
@@ -1,5 +1,14 @@
+:root {
+  --iconsBg : #eee
+  --main-color : #e4e4e4
+}
+
 html {
   font-family: 'Noto Sans KR';
+}
+
+body {
+  height: 300vh;
 }
 
 #header {
@@ -46,35 +55,75 @@ html {
   display: flex;
 }
 
-#gnbList li a {
+#gnbList > li a {
   display: block;
   height: 72px;
   line-height: 72px;
-  padding: 20px 28px;
+  padding: 0px 28px;
 
   font-weight: 500;
+  color: #888;
 }
 
-.headerBtns {
+#gnbList li a.active {
+  color: #000;
+}
+
+#gnbList .depth02 {
+  display: flex;
+  padding: 15px 20px;
+  border-radius: 30px;
+
+  position: absolute;
+  bottom: -30px;
+  
+  background-color: black;
+
+  color: #fff;
+}
+
+#gnbList .depth02 a {
+  padding: 10px 0;
+  margin: 5px;
+}
+
+#gnbList :nth-child(2) a {
+  margin: 0 20px;
+}
+#headerBtns {
   width: 200px;
 }
 
-.headerBtns ul {
+#headerBtns ul {
   display: flex;
   justify-content: flex-end;
 }
 
-.headerBtns ul li {
+#headerBtns ul li {
+  margin: 0 10px;
 }
 
-.headerBtns button {
+  ///////////////////// .headerBtns button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+
+  padding: 5px;
+
   border: none;
   background: none;
+  border-radius: 50%;
 }
 
-.headerBtns svg {
+#headerBtns svg {
   width: 25px;
   stroke: black;
+}
+
+#headerBtns li:nth-child(4) {
+  display: none;
 }
 
 @media screen and (max-width: 1439px) {
@@ -91,5 +140,22 @@ html {
 
   #gnb {
     display: none;
+  }
+
+  #headerBtns li:nth-child(2),
+  #headerBtns li:nth-child(3) {
+    display: none;
+  }
+
+  #headerBtns li:nth-child(4) {
+    display: block;
+  }
+}
+
+/* min-width */
+
+@media (min-width: 1023px) {
+  #headerBtns li button:hover {
+    background-color: var(--iconsBg);
   }
 }
