--- a/TEST/test.css
+++ b/TEST/test.css
@@ -1,3 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 a {
   color: inherit;
 }
@@ -44,21 +59,38 @@ header {
   color: white;
 }
 
-.container1 {
-  width: auto;
-  height: 300px;
-  background-color: #ddd;
-  font-size: 2rem;
-  text-align: center;
+.main {
+  overflow: hidden;
+  background-color: #bbb;
 }
 
-.container2 #button {
+.container1 {
+  display: flex;
+  height: 300px;
+  width: 300vw;
+  transition: 0.25s;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  flex-shrink: 0;
+  width: 100vw;
+  flex-shrink: 0;
+  font-size: 3rem;
+}
+
+.container2 {
   display: flex;
   justify-content: center;
+  padding: 20px 0;
 }
 
-.container2 #button li {
+.container2 button {
   width: 50px;
+  margin: 0 10px;
 }
 
 .container3 {
@@ -98,9 +130,11 @@ header {
   border-radius: 50%;
 
   text-align: center;
-  line-height: 50px;
+  line-height: 45px;
+  font-size: 1.25rem;
+  font-weight: 700;
 
   position: fixed;
-  bottom: 30px;
+  bottom: 40px;
   right: 30px;
 }
